Fix overflowing form background on mobile

--- a/src/pages/sykmelding/OK/APEN/Form/layout/QuestionWrapper.less
+++ b/src/pages/sykmelding/OK/APEN/Form/layout/QuestionWrapper.less
@@ -19,9 +19,9 @@
         background-color: #e4edf2;
         position: absolute;
         height: 100%;
-        width: 200vw;
+        width: 145vw;
         top: 0;
-        left: -100vw;
+        left: -50vw;
         z-index: -1;
     }
 }
